change name of solution files in description

--- a/desc/ap_test.tex
+++ b/desc/ap_test.tex
@@ -124,7 +124,7 @@
     \subsection{نحوهٔ تحویل}
 
     \begin{itemize}
-    \item فایل‌های برنامهٔ خود را با نام‌های \lr{\path{triangle_test.cpp}} و \lr{\path{get_avg_of_vector_test.cpp}} در صفحهٔ \lr{CECM} درس بارگذاری کنید.
+    \item فایل‌های آزمون خود را با نام‌های \lr{\path{AT-SID-triangle_test.cpp}} و \lr{\path{AT-SID-get_avg_of_vector_test.cpp}} در صفحهٔ \lr{CECM} درس بارگذاری کنید که \lr{SID} شمارهٔ دانشجویی شماست؛ برای مثال اگر شمارهٔ دانشجویی شما ۸۱۰۱۹۷۹۹۹ باشد، نام فایل‌های شما باید \lr{\path{AT-810197999-triangle_test.cpp}} و \lr{\path{AT-810197999-get_avg_of_vector_test.cpp}} باشد.
 
     نیازی به تحویل آزمون تابع \lstinline{satisfies_hailstone} نیست.
 
@@ -134,9 +134,9 @@
     
     \item به فرمت و نام فایل‌های خود دقت کنید. از بارگذاری فایل فشرده خودداری کنید.
 
-    \item توجه داشته باشید که با توجه به تست خودکار کدهای شما، عدم رعایت نکات مذکور ممکن است منجر به از دست دادن همه یا بخش زیادی از نمرهٔ شما بشود.
+    \item توجه داشته باشید که با توجه به تست خودکار کدهای شما، عدم رعایت نکات مذکور ممکن است منجر به از~دست~دادن همهٔ نمرهٔ شما بشود.
     
-    \item برنامه‌ی شما باید در سیستم‌عامل لینوکس و با مترجم g++ با استاندارد \lr{C++11} ترجمه و در زمان معقول اجرا شود.
+    \item برنامه‌ی شما باید در سیستم‌عامل لینوکس و با مترجم \lr{g++} با استاندارد \lr{C++11} ترجمه و در زمان معقول اجرا شود.
     
     \item هدف این تمرین یادگیری شماست. لطفاً تمرین را خودتان انجام دهید. در صورت کشف تقلب مطابق قوانین درس با آن برخورد خواهد شد.
     \end{itemize}
