--- a/desc/ap_test.tex
+++ b/desc/ap_test.tex
@@ -5,10 +5,10 @@
 \usepackage{xepersian}
 
 \title{تمرین آزمون نرم‌افزار}
-\author{\href{mailto:hadi.safari@ut.ac.ir?subject=[AP\%20S98 UT]\%20}{هادی صفری}}
+\author{\href{mailto:hadi.safari@ut.ac.ir?subject=[AP\%20S98 AT]\%20}{هادی صفری}}
 \course{برنامه‌سازی پیشرفته}
 \lecturer{رامتین خسروی}
-\deadline{?، ساعت ۲۳:۵۵}
+\deadline{یکشنبه ۱۹ خرداد ۱۳۹۸، ساعت ۲۳:۵۵}
 
 \begin{document}
     \maketitle
